sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Quote_Unit_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Quote_Unit_Net_Price__c</fullName>
    <formula>IF(Vatable__c = true,
   IF(VAT_Inclusive__c = true,
     Unit_Quote_Price__c /( (VALUE(TEXT(VAT_Percentage__c))+100)/100 ) ,
     Unit_Quote_Price__c
    ),
   Unit_Quote_Price__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Unit Net Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>