sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Quote_Unit_VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quote_Unit_VAT_Amount__c</fullName>
    <formula>IF(Vatable__c = true,
   IF(VAT_Inclusive__c = true,
     ((VALUE(TEXT(VAT_Percentage__c))/100 ) * Unit_Quote_Price__c )/( (VALUE(TEXT(VAT_Percentage__c))+100)/100 ) ,
     ((VALUE(TEXT(VAT_Percentage__c))/100 ) * Unit_Quote_Price__c )
    ),
   0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Unit VAT Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>