sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Receipt_Flag__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Flag__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Changes to 0 if Status is &#39;Received&#39; otherwise 1</description>
    <inlineHelpText>Changes to 0 if item is &#39;Received&#39; otherwise 1</inlineHelpText>
    <label>Receipt Flag</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>