sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Reorder_Level__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Level__c</fullName>
    <formula>Inventory_Item__r.Reorder_Point__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reorder Level</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>