sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Reorder_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Quantity__c</fullName>
    <formula>Inventory_Item__r.Policy_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reorder Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>