sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Requesting_Company__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>company</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Procurement Request Line Items (Company)</relationshipLabel>
    <relationshipName>PTS_Line_Items5</relationshipName>
    <type>Lookup</type>
</CustomField>