sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <label>RequestType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stock</fullName>
            </value>
            <value>
                <fullName>Non-Stock</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>