sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Specifications__c.field-meta.xml
<CustomField>
    <fullName>Specifications__c</fullName>
    <label>Specifications</label>
    <type>TextArea</type>
</CustomField>