sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>the position of affairs at a particular time</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Pending Item Request Approval</fullName>
            </value>
            <value>
                <fullName>Pending Sourcing</fullName>
            </value>
            <value>
                <fullName>Pending Quote Approval</fullName>
            </value>
            <value>
                <fullName>Pending Procurement Approval</fullName>
            </value>
            <value>
                <fullName>Pending Director Approval</fullName>
            </value>
            <value>
                <fullName>Requires Re-Approval</fullName>
            </value>
            <value>
                <fullName>Pending Contract</fullName>
            </value>
            <value>
                <fullName>Pending Purchase Order</fullName>
            </value>
            <value>
                <fullName>Purchase Order Created</fullName>
            </value>
            <value>
                <fullName>Partially Received</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Pending User Closure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>