sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Total_Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Amount__c</fullName>
    <formula>Qty_Delivered__c  *  Actual_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>