sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Total_Estimate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimate_Amount__c</fullName>
    <formula>Quantity__c  *  Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Estimate Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>