sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Total_Purchase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchase_Amount__c</fullName>
    <formula>Purchase_Order_Item__r.Item_Cost__c  *  PO_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Purchase Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>