sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Total_Quote_Amount_In_KES__c.field-meta.xml
<CustomField>
    <fullName>Total_Quote_Amount_In_KES__c</fullName>
    <formula>Total_Quote_Price__c  *  Quote_Currency__r.Value__c</formula>
    <label>Total Quote Amount In KES</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>