sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Total_Quote_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Quote_Price__c</fullName>
    <formula>Quote_Net_Total_Amount__c + Quote_Total_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Quote Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>