sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <label>Unit Price Estimate</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>