sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Unit_Quote_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Quote_Price__c</fullName>
    <inlineHelpText>The total unit price inclusive of VAT</inlineHelpText>
    <label>Unit Quote Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>