sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10L (10 Liter container)</fullName>
            </value>
            <value>
                <fullName>20L (20 Liter container)</fullName>
            </value>
            <value>
                <fullName>2L (2 Liter Container)</fullName>
            </value>
            <value>
                <fullName>4L (4 Liter container)</fullName>
            </value>
            <value>
                <fullName>5L (5 Liter Container)</fullName>
            </value>
            <value>
                <fullName>AMT (Amount in Local Currency)</fullName>
            </value>
            <value>
                <fullName>BAG (Bag)</fullName>
            </value>
            <value>
                <fullName>DZ (Dozen)</fullName>
            </value>
            <value>
                <fullName>EA (Each)</fullName>
            </value>
            <value>
                <fullName>FT (Foot)</fullName>
            </value>
            <value>
                <fullName>KES (Kenyan Shillings)</fullName>
            </value>
            <value>
                <fullName>KG (Kilograms)</fullName>
            </value>
            <value>
                <fullName>L (Liters)</fullName>
            </value>
            <value>
                <fullName>M (Meters)</fullName>
            </value>
            <value>
                <fullName>MT (Metric Tons)</fullName>
            </value>
            <value>
                <fullName>P100 (Pack of 100 Pcs)</fullName>
            </value>
            <value>
                <fullName>P11 (Pack of 11 Pcs)</fullName>
            </value>
            <value>
                <fullName>P144 (Pack of 144 Pcs)</fullName>
            </value>
            <value>
                <fullName>P20 (Pack of 20 Pcs)</fullName>
            </value>
            <value>
                <fullName>P25 (Pack of 25 Pcs)</fullName>
            </value>
            <value>
                <fullName>P4 (Pack of 4 Pcs)</fullName>
            </value>
            <value>
                <fullName>P40 (Pack of 40 Pcs)</fullName>
            </value>
            <value>
                <fullName>P50 (Pack of 50 pcs)</fullName>
            </value>
            <value>
                <fullName>P500 (Pack of 500 Pcs)</fullName>
            </value>
            <value>
                <fullName>PC (Piece)</fullName>
            </value>
            <value>
                <fullName>PK (Pack)</fullName>
            </value>
            <value>
                <fullName>PKT (Packet)</fullName>
            </value>
            <value>
                <fullName>PR (Pair)</fullName>
            </value>
            <value>
                <fullName>R25 (Roll of 25KG in weight)</fullName>
            </value>
            <value>
                <fullName>R30M (Roll of 30 meters in length)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>