sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/UoM_conversion_factor__c.field-meta.xml
<CustomField>
    <fullName>UoM_conversion_factor__c</fullName>
    <formula>Purchase_Order_Item__r.UOM_Conversion_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UoM conversion factor</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>