sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>a person or company offering something for sale</inlineHelpText>
    <label>Vendor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sanergy Vendor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Procurement Request Line Items</relationshipLabel>
    <relationshipName>PTS_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>