sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/recordTypes/MasterRecordType.recordType-meta.xml
<RecordType>
    <fullName>MasterRecordType</fullName>
    <active>true</active>
    <label>MasterRecordType</label>
</RecordType>