sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/recordTypes/NonStockItemRecordType.recordType-meta.xml
<RecordType>
    <fullName>NonStockItemRecordType</fullName>
    <active>true</active>
    <label>NonStockItemRecordType</label>
</RecordType>