sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/recordTypes/OneOffItemRecordType.recordType-meta.xml
<RecordType>
    <fullName>OneOffItemRecordType</fullName>
    <active>true</active>
    <label>OneOffItemRecordType</label>
</RecordType>