sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/recordTypes/ServiceItemRecordType.recordType-meta.xml
<RecordType>
    <fullName>ServiceItemRecordType</fullName>
    <active>true</active>
    <label>ServiceItemRecordType</label>
</RecordType>