sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/recordTypes/StockItemRecordType.recordType-meta.xml
<RecordType>
    <fullName>StockItemRecordType</fullName>
    <active>true</active>
    <label>StockItemRecordType</label>
</RecordType>