sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/validationRules/Check_Approval_Before_PO.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Approval_Before_PO</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISPICKVAL(Procurement_Tracking_Sheet__r.Team_Lead_Approval_Status__c,&quot;Approved&quot; )),
 NOT(ISPICKVAL(Procurement_Tracking_Sheet__r.Requestor_Type__c,&quot;Reorder Level&quot; )),
 OR(
    ISPICKVAL(Status__c, &quot;Pending Purchase Order&quot;),
    ISPICKVAL(Status__c, &quot;Purchase Order Created&quot;)
  )
)</errorConditionFormula>
    <errorDisplayField>Actual_Price__c</errorDisplayField>
    <errorMessage>This PR Line cannot be in this Status if the PR has not been approved. Please submit the PR for approval.</errorMessage>
</ValidationRule>