sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/validationRules/CompanyFieldValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CompanyFieldValidation</fullName>
    <active>true</active>
    <description>Prevents users from interchanging company with departments</description>
    <errorConditionFormula>NOT(Requesting_Company__r.Type__c = &quot;company&quot;  )</errorConditionFormula>
    <errorDisplayField>Requesting_Company__c</errorDisplayField>
    <errorMessage>Please select Company</errorMessage>
</ValidationRule>