sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/validationRules/Gla_Override_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Gla_Override_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK( Purchase_Order_Item__c ) ),NOT( ISBLANK( Commodity_Code_Gla__c ) )   ,Override_Gla__c = false, Commodity_Code_Gla__c  &lt;&gt;   GLA__r.Name )</errorConditionFormula>
    <errorDisplayField>Override_Gla__c</errorDisplayField>
    <errorMessage>kindly check the Override Gla Box to override the inventory Item Gla</errorMessage>
</ValidationRule>