sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/validationRules/OverrideJustificationValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>OverrideJustificationValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Override_Justification__c)  ,
 Override_PR_Item_Cost_Check__c = true,
 PR_Item_And_PO_Item_Cost_Difference__c = true)</errorConditionFormula>
    <errorDisplayField>Override_Justification__c</errorDisplayField>
    <errorMessage>Please give a reason for overriding Cost check</errorMessage>
</ValidationRule>