sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/validationRules/PriorityValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>PriorityValidation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( PR_Item_And_PO_Item_Cost_Difference__c = true,
 Override_PR_Item_Cost_Check__c = false)</errorConditionFormula>
    <errorDisplayField>Override_PR_Item_Cost_Check__c</errorDisplayField>
    <errorMessage>PO Item has a cost difference of more than either 5% or 1000 KES. If You Wish To OVERRIDE this check please check this field.</errorMessage>
</ValidationRule>