sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/validationRules/RestrictEditingGLA.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictEditingGLA</fullName>
    <active>false</active>
    <errorConditionFormula>OR(AND( ISCHANGED( GLA__c ) ,NOT(ISPICKVAL(Procurement_Tracking_Sheet__r.Stage__c,&#39;Open&#39;))    ,NOT(ISPICKVAL(Procurement_Tracking_Sheet__r.Stage__c,&#39;Submitted for Approval&#39;))),
AND($User.Id != &#39;005D0000008w3r2&#39;, $User.Id != &#39;005D0000002ShvU&#39;,$User.Id != &#39;005D0000002ShvT&#39;,$User.Id != &#39;005D0000008tWxc&#39;,$User.Id != &#39;0057E000003e0ot&#39;, $User.Id !=&#39;005D0000001qz2K&#39;)
)</errorConditionFormula>
    <errorDisplayField>GLA__c</errorDisplayField>
    <errorMessage>You Cannot edit This Field</errorMessage>
</ValidationRule>