sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/validationRules/RestrictEditingPriceAfterApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictEditingPriceAfterApproval</fullName>
    <active>true</active>
    <description>Total Budget Amount and Quantity cannot be edited once the request has been approved.</description>
    <errorConditionFormula>OR(AND( 
ISPICKVAL(
Procurement_Tracking_Sheet__r.Team_Lead_Approval_Status__c , &#39;Approved&#39;) ,
 ISCHANGED( Budget_Amount__c )),
AND( 
ISPICKVAL(
Procurement_Tracking_Sheet__r.Team_Lead_Approval_Status__c , &#39;Approved&#39;) ,
 ISCHANGED( Quantity__c )))</errorConditionFormula>
    <errorDisplayField>Actual_Price__c</errorDisplayField>
    <errorMessage>Budget amount and Quantity cannot be edited after PR has been approved. If you need to make these edits, please recall the PR approval, make the edits then resubmit for approval</errorMessage>
</ValidationRule>