sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/validationRules/RestrictSelectingAnInactivePOI.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictSelectingAnInactivePOI</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK( Purchase_Order_Item__c )) , ISPICKVAL(Purchase_Order_Item__r.Inventory_Item__r.Item_Type__c, &#39;Stock&#39;),
NOT(ISPICKVAL( Purchase_Order_Item__r.Status__c ,&#39;Active&#39;)) )</errorConditionFormula>
    <errorDisplayField>Purchase_Order_Item__c</errorDisplayField>
    <errorMessage>You should select an active Purchase Order Item for Stock Items</errorMessage>
</ValidationRule>