sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/validationRules/RestrictSelectingInactivePOI.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictSelectingInactivePOI</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( ISPICKVAL(Purchase_Order_Item__r.Status__c , &#39;Active&#39;) ) , NOT(ISBLANK(TEXT(Purchase_Order_Item__r.Status__c))))</errorConditionFormula>
    <errorDisplayField>Purchase_Order_Item__c</errorDisplayField>
    <errorMessage>You cannot select an Inactive Purchase Order Item</errorMessage>
</ValidationRule>