sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/validationRules/ValidateCompanyOnPRLineItems.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateCompanyOnPRLineItems</fullName>
    <active>true</active>
    <description>Ensure company  on PR Line Item is the same as the company on the header</description>
    <errorConditionFormula>Requesting_Company__c  &lt;&gt;  Procurement_Tracking_Sheet__r.Requesting_Company__c</errorConditionFormula>
    <errorDisplayField>Actual_Price__c</errorDisplayField>
    <errorMessage>All PR Line Items for a PR must be of the same Company as on the header</errorMessage>
</ValidationRule>