sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/validationRules/ValidateMRPInventoryItemsandPRs.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateMRPInventoryItemsandPRs</fullName>
    <active>false</active>
    <description>MRP inventory item should not be attached to PR created by employee</description>
    <errorConditionFormula>AND( ISPICKVAL( Inventory_Item__r.Planning_Policy__c , &quot;Reorder Point&quot;) ,
 ISPICKVAL( Procurement_Tracking_Sheet__r.Requestor_Type__c , &quot;Employee&quot;) )</errorConditionFormula>
    <errorMessage>You are not allowed to attach an MRP Inventory Item to employee created Procurement Request</errorMessage>
</ValidationRule>