sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/validationRules/ValidatePOItemCompany.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidatePOItemCompany</fullName>
    <active>true</active>
    <description>The Purchase Item should be of the same company as the PR Line Item</description>
    <errorConditionFormula>AND(Purchase_Order_Item__r.Company__c !=  Requesting_Company__r.Id,
NOT(ISBLANK( Purchase_Order_Item__c)))</errorConditionFormula>
    <errorDisplayField>Purchase_Order_Item__c</errorDisplayField>
    <errorMessage>The Purchase Item should be of the same company as the PR Line Item</errorMessage>
</ValidationRule>